Update ell-studio storage path and enable autocommit in mc_question_generator.ipynb

--- a/mc_question_generator.ipynb
+++ b/mc_question_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
     "\n",
     "\n",
     "dotenv.load_dotenv()\n",
-    "ell.init(store=\"./ell-store\")"
+    "ell.init(store=\"./ell-store\", autocommit=True)"
    ]
   },
   {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,26 +222,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Consider a reversible reaction with the following equilibrium constant expression at a given temperature: K_eq = \\frac{[C]^c[D]^d}{[A]^a[B]^b}. Which of the following statements is true regarding the effect of temperature on the equilibrium position if the reaction is exothermic?\n",
+      "A 1.0 L solution contains 0.10 M of acetic acid (CH3COOH) and 0.10 M of sodium acetate (CH3COONa) at 25°C. When 0.01 moles of hydrochloric acid (HCl) is added to the solution, which of the following statements best describes the resulting change in the solution's characteristics? (Assume no volume change upon HCl addition and that the temperature remains constant.)\n",
       "\n",
-      "A. The equilibrium position will shift towards the reactants as temperature increases. ✅\n",
-      "For an exothermic reaction, increasing the temperature shifts the equilibrium position towards the reactants according to Le Chatelier's principle, since the system compensates for the added heat by favoring the endothermic reverse reaction.\n",
+      "A. The pH of the solution decreases slightly due to the common ion effect, as added HCl suppresses the ionization of acetic acid, while acetate ions react with H+ ions to form acetic acid. ✅\n",
+      "When HCl is added, it provides excess H+ ions. These protons will react with the acetate ions (CH3COO-) to form additional acetic acid (CH3COOH), thus causing a slight decrease in the pH. This buffer action primarily follows the principle of Le Chatelier as the system tries to counteract the effect of the added H+ by forming more CH3COOH. The presence of the acetate ion (a common ion) suppresses further ionization of CH3COOH due to common ion effect, thus buffering the pH decline.\n",
       "\n",
-      "B. The equilibrium constant K_eq remains unchanged with temperature changes. ❌\n",
-      "The equilibrium constant depends on temperature. For an exothermic reaction, K_eq decreases with increasing temperature.\n",
+      "B. The pH of the solution increases due to the common ion effect from the added HCl. ❌\n",
+      "This option is incorrect because the addition of HCl, a strong acid, introduces more H+ ions, which would decrease the pH, not increase it. The common ion effect here would not cause an increase in pH but rather resist drastic changes.\n",
       "\n",
-      "C. The equilibrium constant K_eq will increase as temperature increases. ❌\n",
-      "For an exothermic reaction, the equilibrium constant K_eq actually decreases with an increase in temperature because the equilibrium favors the reactants.\n",
+      "C. The concentration of acetate ions increases, counteracting the addition of HCl. ❌\n",
+      "This option is incorrect because the acetate ions react with H+ ions originally from HCl to form acetic acid, leading to a decrease in their concentration, not an increase.\n",
       "\n",
-      "D. The equilibrium position will shift towards the products as temperature increases. ❌\n",
-      "This statement is true for endothermic reactions, but for exothermic reactions like the one in the question, increasing temperature shifts the equilibrium towards the reactants.\n",
+      "D. The buffer capacity is exceeded, leading to a significant drop in pH due to the addition of 0.01 moles of HCl. ❌\n",
+      "This option is incorrect because the buffer capacity is not immediately exceeded by such a small addition of HCl; the solution is specifically prepared to buffer changes in pH by converting acetate ions back to acetic acid, thus preventing a significant pH drop.\n",
       "\n",
       "\n"
      ]
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -356,10 +356,10 @@
      "output_type": "stream",
      "text": [
       "Correct: True\n",
-      "Difficulty: 2\n",
-      "Rating: 4\n",
+      "Difficulty: 3\n",
+      "Rating: 5\n",
       "Feedback:\n",
-      "The question is clear and tests the basic understanding of the effect of temperature on an equilibrium involving an exothermic reaction, which is an important concept in chemistry. The distractors are plausible and require the students to apply their knowledge of Le Chatelier's principle correctly, making the task more than simple recall. However, it primarily relies on basic understanding rather than deeper analysis or multi-step reasoning. The question is relevant, the options are well-balanced without any obvious gives, and it aligns well with key learning objectives regarding chemical equilibria and thermodynamics.\n"
+      "The question is well-constructed, focusing on key principles of buffer solutions and the common ion effect, which are important concepts in general chemistry. The options are plausible, with one being clearly correct, demonstrating understanding of buffer capacity and Le Chatelier’s principle. The question requires test-takers to apply knowledge of acid-base equilibria in a new context, making it moderately challenging. It avoids common pitfalls of multiple-choice questions, such as unbalanced or obviously incorrect distractors.\n"
      ]
     }
    ],
